@@ -1,3 +1,14 @@
+2011-01-14  Martin Rudalics  <rudalics@gmx.at>
+
+	* window.el (window-safely-shrinkable-p): Remove.
+
+	* calendar/calendar.el (calendar-generate-window): Only fit a
+	vertically combined window to its buffer.
+	(calendar-basic-setup): Call pop-to-buffer, preferably making a
+	new window at the bottom of the frame.  Remove the
+	split-height-threshold binding around call of
+	calendar-list-holidays, this must be handled separately.
+
 2011-01-13  Martin Rudalics  <rudalics@gmx.at>
 
 	* mail/sendmail.el (sendmail-user-agent-compose): Remove let
